--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -7,13 +7,12 @@
 <body>
     <header>
 		<input type="checkbox" id="nav-check">
-		<a href="/">
             <div class="logo">
-<!--				<img th:src="@{/images/brain_dump_logo.svg}"/>-->
-				PT Blog
+				<a href="/">
+					<img th:src="@{/images/braindump_logo.svg}" alt="Blog Logo"/>
+				</a>
             </div>
 
-        </a>
 
 		<div class="nav-btn">
 			<label for="nav-check">
