--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -9,7 +9,7 @@
 		<input type="checkbox" id="nav-check">
             <div class="logo">
 				<a href="/">
-					<img th:src="@{/images/braindump_logo.svg}" alt="Blog Logo"/>
+					<img th:src="@{~/blog-repo/images/logo.svg}" alt="Blog Logo"/>
 				</a>
             </div>
 
