Updated footer with correct copyright

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -6,7 +6,7 @@
 <body>
 <footer>
 	<p>This site was created by me on a platform created by me. It's an (soon to be) open sourced blogging platform designed for developers!</p>
-	<p>copyright 2022</p>
+	<p>copyright 2022-2023</p>
 </footer>
 </body>
 </html>
